Thu Jul 13 13:33:12 2006  George (Jiri) Lebl <jirka@5z.com>

	* src/funclib.c, lib/linear_algebra/linear_algebra.gel,
	  lib/linear_algebra/subspaces.gel:
	  Add CountZeroColumns function which is quicker then
	  stripping zero columns and then counting the remainder.  
	  Further port StripZeroColumns to C to make it a lot more
	  efficient.  This also optimizes things such as nullity, rank,
	  ColumnSpace, NullSpace and related.

	* src/geniustests.txt: Add some tests

	* help/C/gel-function-list.xml, help/C/genius.xml: Update the manual,
	  and expand a bunch of entries for a bunch of functions.

Thu Jul 13 10:53:54 2006  George (Jiri) Lebl <jirka@5z.com>

	* lib/sets/basic.gel, src/funclib.c, src/eval.[ch]: Implement IsIn,
	  Intersection and SetMinus in C for speed

	* lib/linear_algebra/subspaces.gel,
	  lib/linear_algebra/linear_algebra.gel:  Minor speed improvements
	  to NullSpace

	* src/geniustests.txt: add some more tests

Thu Jul 13 08:56:10 2006  George (Jiri) Lebl <jirka@5z.com>

	* src/eval.c: fix leaks

	* src/matrix.c: zero out matrix data to init it

	* lib/linear_algebra/linear_algebra.gel: simplify NonPivotColumns a
	  tiny bit

Thu Jul 13 01:32:55 2006  George (Jiri) Lebl <jirka@5z.com>

	* src/eval.[ch], src/matrixw.c, src/matrix.c: Fix a whole bunch of
	  leaks and memory corruption problems especially with respect to
	  loops and matrixes.

	* src/eval.c: fix evaluation of matrix entries to be a little faster
	  perhaps (don't ever push value nodes) and evaluate matrix entries
	  in the most obvious order rather then our previous
	  very weird order.

	* src/geniustest.txt: add a test

Wed Jul 12 14:26:35 2006  George (Jiri) Lebl <jirka@5z.com>

	* src/gnome-genius.c: fix error in using the file chooser

	* src/eval.c: fix compiler warning

	* ve/*, configure.in, **/Makefile.am: use a private copy of
	  slightly cut down vicious-extensions to make things work

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>
