@@ -1,3 +1,7 @@
+Thu Jul 13 13:42:25 2006  George (Jiri) Lebl <jirka@5z.com>
+
+	* src/calc.h, src/*.c: update copyright strings for 2006
+
 Thu Jul 13 13:33:12 2006  George (Jiri) Lebl <jirka@5z.com>
 
 	* src/funclib.c, lib/linear_algebra/linear_algebra.gel,
